Bug 270246 - ksysguard doesn't see sensors
Summary: ksysguard doesn't see sensors
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 270258 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-06 20:57 UTC by Andrew Gaydenko
Modified: 2011-04-14 17:41 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Gaydenko 2011-04-06 20:57:23 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

After upgrading from 4.6.1 to 4.6.2 ksysguard (as well as some plasmoids like system monitors) doesn't see sensors (both specific, like fun speed and sys temp,and coretemp's ones) any more.

Reproducible: Always
Comment 1 John Tapsell 2011-04-07 09:12:17 UTC
Can you be as specific as possible about what you mean by "can't see" please?

The kernel has moved the fan speed and temperature information from /proc to /sys, so what I tried to do was implement the new system, but keep backwards compatibility with the old system.

Did you have a sensor that used to work, but now no longer works?

Could you do:

$ ls /sys/class/thermal/

and

$ ls /proc/acpi/thermal_zone
Comment 2 Antonis K 2011-04-07 09:41:48 UTC
I'm facing the same issue. It seems like kde is findind the sensors at /sys/class/thermal but files there don't contain any useful data (like a 'temperature' file or something). 'sensors' from 'lm_sensors' on a terminal works as expected.
Comment 3 Antonis K 2011-04-07 10:07:35 UTC
I just found that the temperatures of the two cores of my core 2 duo cpu are stored at /sys/devices/platform/coretemp.0/temp1_input and /sys/devices/platform/coretemp.1/temp1_input . I'm using arch linux (2.6.37 kernel)
Comment 4 Andrew Gaydenko 2011-04-07 10:10:37 UTC
$ sudo ls /sys/class/thermal/
cooling_device0  cooling_device1  cooling_device2  cooling_device3

$ sudo ls /proc/acpi/thermal_zone
ls: cannot access /proc/acpi/thermal_zone: No such file or directory

After upgrading to 4.6.2 KSysGuard hasn't sensors in the sources tree at all. Nothing changed except for kde upgrading. 'sensors' output is the same:

$ sensors
coretemp-isa-0000
Adapter: ISA adapter
Core 0:       +29.0°C  (high = +83.0°C, crit = +99.0°C)

coretemp-isa-0001
Adapter: ISA adapter
Core 1:       +28.0°C  (high = +83.0°C, crit = +99.0°C)

coretemp-isa-0002
Adapter: ISA adapter
Core 2:       +38.0°C  (high = +83.0°C, crit = +99.0°C)

coretemp-isa-0003
Adapter: ISA adapter
Core 3:       +30.0°C  (high = +83.0°C, crit = +99.0°C)

it8720-isa-0290
Adapter: ISA adapter
in0:          +0.88 V  (min =  +0.00 V, max =  +4.08 V)
in1:          +1.58 V  (min =  +0.00 V, max =  +4.08 V)
in2:          +3.38 V  (min =  +0.00 V, max =  +4.08 V)
+5V:          +3.06 V  (min =  +0.00 V, max =  +4.08 V)
in4:          +0.16 V  (min =  +0.00 V, max =  +4.08 V)  ALARM
in5:          +3.06 V  (min =  +0.00 V, max =  +4.08 V)
in6:          +0.02 V  (min =  +0.00 V, max =  +4.08 V)  ALARM
5VSB:         +2.98 V  (min =  +0.00 V, max =  +4.08 V)
Vbat:         +3.17 V  
fan1:           0 RPM  (min =    0 RPM)
fan2:           0 RPM  (min =    0 RPM)
fan3:           0 RPM  (min =    0 RPM)
temp1:        +41.0°C  (low  = +127.0°C, high = +127.0°C)  sensor = thermistor
temp2:        +25.0°C  (low  = +127.0°C, high = +127.0°C)  sensor = thermistor
temp3:        +20.0°C  (low  = +127.0°C, high = +90.0°C)  sensor = thermistor
Comment 5 Andrew Gaydenko 2011-04-07 10:12:30 UTC
BTW, here we have duplicate: https://bugs.kde.org/show_bug.cgi?id=270258

And, well, definitely some kde code was changed rather bug fixing only between 4.6.1 and 4.6.2, I think :-)
Comment 6 Andrew Gaydenko 2011-04-07 10:22:53 UTC
Antonis K,

I also have those temps for i5:

$ ls /sys/devices/platform/coretemp*
/sys/devices/platform/coretemp.0:
driver  hwmon  modalias  name  power  subsystem  temp1_crit  temp1_crit_alarm  temp1_input  temp1_label  temp1_max  uevent

/sys/devices/platform/coretemp.1:
driver  hwmon  modalias  name  power  subsystem  temp1_crit  temp1_crit_alarm  temp1_input  temp1_label  temp1_max  uevent

/sys/devices/platform/coretemp.2:
driver  hwmon  modalias  name  power  subsystem  temp1_crit  temp1_crit_alarm  temp1_input  temp1_label  temp1_max  uevent

/sys/devices/platform/coretemp.3:
driver  hwmon  modalias  name  power  subsystem  temp1_crit  temp1_crit_alarm  temp1_input  temp1_label  temp1_max  uevent
Comment 7 Jim Jones 2011-04-07 11:12:47 UTC
i also have more then one temp ...

/sys $ find . |grep temp
./devices/pci0000:00/0000:00:18.3/temp1_input
./devices/pci0000:00/0000:00:18.3/temp3_input
./bus/pci/drivers/k8temp
./bus/pci/drivers/k8temp/0000:00:18.3
./bus/pci/drivers/k8temp/module
./bus/pci/drivers/k8temp/uevent
./bus/pci/drivers/k8temp/unbind
./bus/pci/drivers/k8temp/bind
./bus/pci/drivers/k8temp/new_id
./bus/pci/drivers/k8temp/remove_id
./module/k8temp
./module/k8temp/holders
./module/k8temp/initstate
./module/k8temp/refcnt
./module/k8temp/sections
./module/k8temp/sections/.note.gnu.build-id
./module/k8temp/sections/.text
./module/k8temp/sections/.exit.text
./module/k8temp/sections/.devexit.text
./module/k8temp/sections/.devinit.text
./module/k8temp/sections/.init.text
./module/k8temp/sections/.rodata.str1.1
./module/k8temp/sections/.rodata.str1.8
./module/k8temp/sections/.rodata
./module/k8temp/sections/.data
./module/k8temp/sections/.gnu.linkonce.this_module
./module/k8temp/sections/.symtab
./module/k8temp/sections/.strtab
./module/k8temp/notes
./module/k8temp/notes/.note.gnu.build-id
./module/k8temp/drivers
./module/k8temp/drivers/pci:k8temp

it seems my temp is at:

sensors && cat /sys/devices/pci0000:00/0000:00:18.3/temp*_input
k8temp-pci-00c3
Adapter: PCI adapter
Core0 Temp:   +51.0°C  
Core1 Temp:   +50.0°C  

51000
50000
Comment 8 John Tapsell 2011-04-07 11:13:51 UTC
*** Bug 270258 has been marked as a duplicate of this bug. ***
Comment 9 John Tapsell 2011-04-07 11:25:27 UTC
Anyone know which sensor the plasmoid was using?  What's the name of the sensor(s) exactly that are missing?

I'm not clear if this is because of /proc/acpi  or lmsensors
Comment 10 John Tapsell 2011-04-07 11:58:36 UTC
Git commit 0e151ea2ab1663f3649688139739712060ae3259 by John Tapsell.
Committed on 07/04/2011 at 11:59.
Pushed by johnflux into branch 'KDE/4.6'.

Fix accidental removal of a #include, when adding freebsd support.  This broke the lmsensors at minimum

BUG: 270246
BUG: 270246
CCMAIL: naylor.b.david@gmail.com

M  +1    -0    ksysguard/ksysguardd/modules.h     

http://commits.kde.org/kde-workspace/0e151ea2ab1663f3649688139739712060ae3259
Comment 11 John Tapsell 2011-04-07 11:58:36 UTC
Git commit 0e151ea2ab1663f3649688139739712060ae3259 by John Tapsell.
Committed on 07/04/2011 at 11:59.
Pushed by johnflux into branch 'KDE/4.6'.

Fix accidental removal of a #include, when adding freebsd support.  This broke the lmsensors at minimum

BUG: 270246
BUG: 270246
CCMAIL: naylor.b.david@gmail.com

M  +1    -0    ksysguard/ksysguardd/modules.h     

http://commits.kde.org/kde-workspace/0e151ea2ab1663f3649688139739712060ae3259
Comment 12 John Tapsell 2011-04-07 11:59:49 UTC
Git commit 23863a99399cbb274f6756146b3c08de2efa0c7f by John Tapsell.
Committed on 07/04/2011 at 11:59.
Pushed by johnflux into branch 'master'.

Fix accidental removal of a #include, when adding freebsd support.  This broke the lmsensors at minimum

BUG: 270246
BUG: 270246
CCMAIL: naylor.b.david@gmail.com

M  +1    -0    ksysguard/ksysguardd/modules.h     

http://commits.kde.org/kde-workspace/23863a99399cbb274f6756146b3c08de2efa0c7f