Fix accidental removal of a #include, when adding freebsd support.  This broke the lmsensors at minimum

BUG: 270246
BUG: 270246
CCMAIL: naylor.b.david@gmail.com